添加获取服务器信息
